# hamilton

./: .pre-commit-config.yaml  pyproject.toml
contrib/: pyproject.toml
contrib/docs/: package-lock.json
contrib/hamilton/contrib/dagworks/conversational_rag/: README.md  __init__.py  test_conversational_rag.py
contrib/hamilton/contrib/dagworks/faiss_rag/: README.md  __init__.py  test_faiss_rag.py
dev_tools/language_server/: pyproject.toml
dev_tools/language_server/hamilton_lsp/: server.py
dev_tools/vscode_extension/: package-lock.json  package.json
hamilton/: driver.py  graph.py
hamilton/function_modifiers/: delayed.py
hamilton/plugins/: polars_lazyframe_extensions.py
plugin_tests/h_dask/: conftest.py
scripts/: README.md  apache_release_helper.py  verify-sub-packages.md
scripts/verify-sub-packages/: verify_all.sh  verify_contrib.sh  verify_lsp.sh  verify_sdk.sh  verify_ui.sh
sf-hamilton-contrib-redirect/: README.md  build.sh  pyproject.toml.template
sf-hamilton-lsp-redirect/: README.md  build.sh  pyproject.toml.template
sf-hamilton-sdk-redirect/: README.md  build.sh  pyproject.toml.template
sf-hamilton-ui-redirect/: README.md  build.sh  pyproject.toml.template
tests/: conftest.py
tests/function_modifiers/: test_delayed.py
tests/plugins/: test_mlflow_extension.py  test_polars_lazyframe_extensions.py  test_sklearn_plot_extensions.py
ui/backend/: README.md  pyproject.toml
ui/backend/server/server/: settings_mini.py  urls.py
ui/backend/server/trackingserver_projects/: schema.py
ui/backend/tests/: test_build.py
ui/frontend/: package-lock.json  package.json
ui/sdk/: .pre-commit-config.yaml  requirements-test.txt
ui/sdk/src/hamilton_sdk/api/: clients.py
ui/sdk/tests/: test_clients.py  test_sdist.py
ui/sdk/tests/tracking/: test_ibis_stats.py  test_langchain_stats.py  test_polars_stats.py  test_pyspark_stats.py
