# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "apache-hamilton-contrib"
version = "0.0.8"  # Keep in sync with contrib/hamilton/contrib/version.py until this becomes dynamic
description = "Apache Hamilton's user contributed shared dataflow library."
readme = "README.md"
requires-python = ">=3.10, <4"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "DISCLAIMER"]
keywords = ["hamilton", "collaborative", "shared", "dataflow", "library", "contrib"]
authors = [
    {name = "Stefan Krawczyk", email = "stefank@cs.stanford.edu"},
    {name = "Elijah ben Izzy", email = "elijah@dagworks.io"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "apache-hamilton",
]

[project.optional-dependencies]
visualization = ["apache-hamilton[visualization]"]
contribute = ["click>8.0.0", "gitpython"]

[project.urls]
homepage = "https://www.tryhamilton.dev/"
documentation = "https://hamilton.apache.org/"
issues = "https://github.com/apache/hamilton/issues"
source = "https://github.com/apache/hamilton/contrib"

[project.scripts]
init-dataflow = "hamilton.contribute:initialize"

[tool.flit.module]
name = "hamilton.contrib"

[tool.flit.sdist]
include = [
    "LICENSE",
    "NOTICE",
    "DISCLAIMER",
    "requirements.txt",
]
exclude = [
    "tests/**",
    ".git/**",
    "**/__pycache__/**",
    "**/*.pyc",
]
