# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "apache-hamilton-lsp"
version = "0.1.0"
description = "Apache Hamilton Language Server powering IDE features."
readme = "README.md"
requires-python = ">=3.10, <4"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE", "DISCLAIMER"]
keywords = [
    "hamilton",
    "dagworks",
    "vscode",
    "extension",
    "data science",
    "pipelines",
    "lsp",
    "language-server",
]
authors = [
    {name = "Thierry Jean", email = "thierry@dagworks.io"},
]
classifiers = [
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pygls>=2.0",
    "apache-hamilton[visualization]>=1.56",
]

[project.urls]
homepage = "https://www.tryhamilton.dev/"
documentation = "https://hamilton.apache.org/"
issues = "https://github.com/apache/hamilton/issues"
source = "https://github.com/apache/hamilton/tree/main/dev_tools/language_server"

[project.optional-dependencies]
test = [
    "prek",
    "pytest",
]

[project.scripts]
hamilton-lsp = "hamilton_lsp.__main__:main"

[tool.flit.module]
name = "hamilton_lsp"

[tool.flit.sdist]
include = [
    "LICENSE",
    "NOTICE",
    "DISCLAIMER",
]
exclude = [
    "tests/**",
    ".git/**",
    "**/__pycache__/**",
    "**/*.pyc",
]
